<resources>
    <string name="app_name">Fruitopia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_next">NEXT</string>
    <string name="text_home">Home</string>
    <string name="text_cart">Cart</string>
    <string name="text_profile">Profile</string>
    <string name="text_header_name">Hello, Syafira</string>
    <string name="text_header_greeting">Mau buah apa hari ini?</string>
    <string name="text_discount">Promo\nkhusus pengguna\nbaru</string>
    <string name="text_discount_desc">Produk pilihan terbaik</string>
    <string name="text_product_name">Produk</string>
    <string name="text_product_greeting">Cobalah Buah Favorit, Segar dan\nSelalu Diperbarui!</string>
    <string name="text_header_seeall">Produk</string>
    <string name="text_header_cart">Keranjang</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_checkout">Pesan</string>
    <string name="text_header_checkout">Konfirmasi Pesanan</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="rb_pick_up">Pick up</string>
    <string name="delivery">Delivery</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="rb_cash">Cash</string>
    <string name="rb_payment">Payment</string>
    <string name="shopping_summary">Ringkasan Pembayaran</string>
    <string name="text_order">Pesanan</string>
    <string name="text_detail_product">Detail Produk</string>
    <string name="text_number_count">1</string>
    <string name="text_header_detail">Detail Produk</string>

    <string name="text_not_registered_yet_register_here">Not registered yet? Register Here</string>
    <string name="text_name_app">FRUITOPIA</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_total_date">Tanggal Transaksi</string>
    <string name="detail_order">Alamat Pengiriman</string>
    <string name="text_header_riwayat">Riwayat Transaksi</string>
    <string name="text_email">Email</string>
    <string name="text_nama">Nama</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_log_out">Log-out</string>
    <string name="text_header_profile">Profile</string>
    <string name="text_nama_buah">Nama Buah:</string>
    <string name="text_total_quantity">Jumlah Buah:</string>
    <string name="text_nama_penerima">Nama Penerima:</string>
    <string name="text_alamat">Alamat:</string>
    <string name="text_total_price_history">Total Harga:</string>
    <string name="text_date">Tanggal Transaksi:</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="text_price_per_item">Harga Satuan:</string>
    <string name="text_header_update">Update Pesanan</string>
    <string name="detail_update_order">Detail Pesanan</string>
</resources>