<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_primary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_section_order"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_delivery_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/app_color_primary"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_delivery_method"
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/text_delivery_method"
                        android:textColor="@color/app_color_on_primary"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/toggle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_white_outline"
                        android:checkedButton="@+id/rb_pick_up"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_pick_up"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toggle_background"
                            android:button="@null"
                            android:fontFamily="@font/open_sans_bold"
                            android:gravity="center"
                            android:text="@string/rb_pick_up"
                            android:textColor="@color/app_color_on_primary" />

                        <RadioButton
                            android:id="@+id/rb_delivery"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:layout_marginStart="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toggle_background"
                            android:button="@null"
                            android:fontFamily="@font/open_sans_bold"
                            android:gravity="center"
                            android:text="@string/delivery"
                            android:textColor="@color/app_color_on_primary" />

                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/vw_line_1"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/dotted_line"
                app:layout_constraintTop_toBottomOf="@id/cv_delivery_method" />

            <TextView
                android:id="@+id/tv_order"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/text_order"
                android:textColor="@color/app_color_on_primary"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/vw_line_1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tv_order"
                tools:itemCount="2"
                tools:listitem="@layout/item_cart_product_order" />

            <View
                android:id="@+id/vw_line_2"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/dotted_line"
                app:layout_constraintTop_toBottomOf="@id/rv_cart" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/app_color_primary"
                app:layout_constraintTop_toBottomOf="@id/vw_line_2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_payment_method"
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/text_payment_method"
                        android:textColor="@color/app_color_on_primary"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/toggle_payment"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_white_outline"
                        android:checkedButton="@+id/rb_cash"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_cash"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="1dp"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toggle_background"
                            android:button="@null"
                            android:fontFamily="@font/open_sans_bold"
                            android:gravity="center"
                            android:text="@string/rb_cash"
                            android:textColor="@color/app_color_on_primary" />

                        <RadioButton
                            android:id="@+id/rb_payment"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:layout_marginStart="1dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toggle_background"
                            android:button="@null"
                            android:fontFamily="@font/open_sans_bold"
                            android:gravity="center"
                            android:text="@string/rb_payment"
                            android:textColor="@color/app_color_on_primary" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/vw_line_3"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/dotted_line"
                app:layout_constraintTop_toBottomOf="@id/cv_payment_method" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_shopping_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/app_color_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_payment_method">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_shopping_summary"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/shopping_summary"
                        android:textColor="@color/app_color_on_primary"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tv_label_total_price"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans_bold"
                            android:text="@string/text_total_price"
                            android:textAlignment="textStart"
                            android:textColor="@color/app_color_on_primary" />

                        <TextView
                            android:id="@+id/tv_total_price"
                            style="@style/TextAppearance.Material3.TitleMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:fontFamily="@font/open_sans_bold"
                            android:maxLines="1"
                            android:text="Rp. 200.000"
                            android:textAlignment="textEnd"
                            android:textColor="@color/app_color_on_primary" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_section_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/app_color_primary"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/vw_line_4"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/app_color_secondary"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/text_checkout"
                android:textColor="@color/app_color_on_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>